crates/strider-analyze/tests/snapshots/v3__arm_be__patterns__main.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100d8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x10100:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v13" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "9" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "9" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "16" -> "9" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x10138:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v21" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v21" [color="#888888", style=dashed];
  "v21" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v22" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v22" [color="#888888", style=dashed];
  "v22" -> "17" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v23" [color="#888888", style=dashed];
  "v23" -> "17" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "24" -> "17" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "17" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x10174:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "29" -> "25" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v30" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v30" [color="#888888", style=dashed];
  "v30" -> "25" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v31" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v31" [color="#888888", style=dashed];
  "v31" -> "25" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "32" -> "25" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" -> "25" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "25" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "35" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "25" -> "35" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x101e0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" -> "35" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "39" -> "35" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "40" -> "35" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v41" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v41" [color="#888888", style=dashed];
  "v41" -> "35" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "40" -> "35" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "42" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "35" -> "42" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v45" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "35" -> "v45" [color="#888888", style=dashed];
  "v45" -> "42" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "35" -> "v46" [color="#888888", style=dashed];
  "v46" -> "42" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "35" -> "v47" [color="#888888", style=dashed];
  "v47" -> "42" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "44" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v45" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "35" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "49" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "35" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v52" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v52" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v41" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "39" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x1ffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "38" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "56" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x1ffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "25" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v58" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v58" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "59" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v60" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v60" [color="#888888", style=dashed];
  "v60" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "17" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "59" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x1fffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "62" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v63" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v63" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "64" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "65" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "62" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "67" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "17" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v68" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v68" -> "65" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "69" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v21" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "69" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "9" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "71" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v13" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "71" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "1" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "73" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v74" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v74" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "75" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "76" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v77" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v77" -> "73" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "78" -> "73" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "76" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "79" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v80" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v80" -> "76" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "81" -> "76" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "81" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "79" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "82" -> "79" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v83" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v83" -> "79" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "84" -> "79" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "84" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "82" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
